joueur et custom
